# Qodia-Kodierungstool

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-nginx  LICENSE  README.md  app.py  app.yaml  compose.yaml  pyproject.toml  requirements.txt
data/: GOA_Ziffern.csv  nginx.conf  template_rechnung.html
schemas/padnext_v2/: changelog.txt  padx_adl_v2.12.xsd  padx_auf_v2.12.xsd  padx_basis_v2.12.xsd  padx_enums_v2.12.xsd  padx_qadl_v2.12.xsd
schemas/padnext_v2_py/: __init__.py  padx_adl_v2_12.py  padx_auf_v2_12.py  padx_basis_v2_12.py  padx_enums_v2_12.py  padx_qadl_v2_12.py
scripts/: download_and_install.ps1  download_and_install.sh  generate_keys_and_certs.py  generate_self_signed_cert.sh  push_to_public_repo.sh  setup.ps1  setup.sh  setup_docker.ps1  setup_docker.sh  setup_python.ps1  setup_python.sh  start_qodia_python.bat
utils/: session.py  utils.py
utils/helpers/: anonymization.py  api.py  canvas.py  db.py  encrpyter.py  files.py  logger.py  ocr.py  otlp_connection.py  padnext.py  settings.py  telemetry.py  transform.py  xml.py
utils/stages/: analyze.py  anonymize.py  edit_anonymized.py  feedback_modal.py  generate_result_modal.py  modal.py  pad_modal.py  rechnung_anonymize.py  result.py
